# TrackForge-app

./: .gitignore  ARCHITECTURE.md  App.tsx  CODE_REVIEW_FINDINGS.md  IMPLEMENTATION_SUMMARY.md  README.md  app.json  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.cursor/plans/: partner_b0a0236a.plan.md  partner_docs_and_proposal.plan.md
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  database.py  deps.py  errors.py  idempotency.py  rate_limit.py  security.py  tasks.py
backend/app/domains/: __init__.py
backend/app/domains/auth/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/domains/nutrition/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/domains/ocr/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/domains/progress/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/domains/users/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/domains/workouts/: __init__.py  models.py  router.py  schemas.py  service.py
backend/scripts/: __init__.py  seed.py
backend/tests/: __init__.py  conftest.py  test_auth_api.py  test_calculations.py  test_security.py  test_workout_api.py
docs/: README.md
docs/partner/: TrackForge_Partner_Plan.md
docs/pdf/: theme.css
docs/proposals/: TrackForge_Commercial_Proposal_2025-12-22.md
scripts/: export_docs_to_pdf.py
src/api/: client.ts
src/components/: Button.tsx  Card.tsx  Input.tsx  (+5 more)
(+52 files in other folders)
